// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser tests > extractNodesAndWays and extractSegmentsAndPoints with real data 1`] = `
{
  "10006197522": {
    "lat": 49.3871089,
    "lon": 11.3853463,
  },
  "10006197523": {
    "lat": 49.3867636,
    "lon": 11.3856249,
  },
  "10006197524": {
    "lat": 49.3864279,
    "lon": 11.3857583,
  },
  "10712699128": {
    "lat": 49.3971696,
    "lon": 11.3913469,
  },
  "10721551215": {
    "lat": 49.3912487,
    "lon": 11.3618983,
  },
  "10721551217": {
    "lat": 49.391438,
    "lon": 11.3626009,
  },
  "10721551219": {
    "lat": 49.3969221,
    "lon": 11.3906433,
  },
  "11042105000": {
    "lat": 49.3900143,
    "lon": 11.3939694,
  },
  "11042105001": {
    "lat": 49.3900593,
    "lon": 11.3936425,
  },
  "11042105002": {
    "lat": 49.3900864,
    "lon": 11.3933517,
  },
  "11042105003": {
    "lat": 49.3900008,
    "lon": 11.3928809,
  },
  "11042105004": {
    "lat": 49.3900143,
    "lon": 11.3923825,
  },
  "11042120005": {
    "lat": 49.3900368,
    "lon": 11.3921055,
  },
  "11042120006": {
    "lat": 49.3899377,
    "lon": 11.3918217,
  },
  "11042120007": {
    "lat": 49.3898701,
    "lon": 11.3916209,
  },
  "11042120008": {
    "lat": 49.389442,
    "lon": 11.3912678,
  },
  "11042120009": {
    "lat": 49.3893338,
    "lon": 11.3910878,
  },
  "11042120010": {
    "lat": 49.3888652,
    "lon": 11.3898832,
  },
  "11042120011": {
    "lat": 49.3887345,
    "lon": 11.3891541,
  },
  "11054684064": {
    "lat": 49.3985111,
    "lon": 11.3898838,
  },
  "11054684065": {
    "lat": 49.3991225,
    "lon": 11.3905336,
  },
  "11054687399": {
    "lat": 49.3988445,
    "lon": 11.3903456,
  },
  "11054704121": {
    "lat": 49.3986197,
    "lon": 11.3884753,
  },
  "11054704122": {
    "lat": 49.3984241,
    "lon": 11.3889008,
  },
  "11054704124": {
    "lat": 49.39841,
    "lon": 11.3897105,
  },
  "11054704125": {
    "lat": 49.3984111,
    "lon": 11.3898051,
  },
  "11138718785": {
    "lat": 49.3951628,
    "lon": 11.3823184,
  },
  "11159845004": {
    "lat": 49.3902792,
    "lon": 11.3596782,
  },
  "11159904705": {
    "lat": 49.3900131,
    "lon": 11.3595371,
  },
  "11329057425": {
    "lat": 49.3850103,
    "lon": 11.3969136,
  },
  "1260279909": {
    "lat": 49.3892089,
    "lon": 11.3882796,
  },
  "1260279914": {
    "lat": 49.3873917,
    "lon": 11.3878369,
  },
  "1260279916": {
    "lat": 49.3882567,
    "lon": 11.3864308,
  },
  "1260279919": {
    "lat": 49.3867406,
    "lon": 11.3878877,
  },
  "1289323232": {
    "lat": 49.3993404,
    "lon": 11.3865396,
  },
  "1289323233": {
    "lat": 49.389553,
    "lon": 11.3702707,
  },
  "1289323237": {
    "lat": 49.3893761,
    "lon": 11.3693846,
  },
  "1289323238": {
    "lat": 49.3902853,
    "lon": 11.3707842,
  },
  "1289323243": {
    "lat": 49.3929075,
    "lon": 11.3814747,
  },
  "1289323245": {
    "lat": 49.3894665,
    "lon": 11.3696937,
  },
  "1289323248": {
    "lat": 49.3963092,
    "lon": 11.3821614,
  },
  "1289323251": {
    "lat": 49.3993643,
    "lon": 11.3861156,
  },
  "1289323258": {
    "lat": 49.3987425,
    "lon": 11.3869445,
  },
  "1289323259": {
    "lat": 49.3912654,
    "lon": 11.3759488,
  },
  "1289323261": {
    "lat": 49.3891047,
    "lon": 11.3693874,
  },
  "1289323262": {
    "lat": 49.3992894,
    "lon": 11.3872262,
  },
  "1289323263": {
    "lat": 49.390188,
    "lon": 11.3708288,
  },
  "1289323265": {
    "lat": 49.3928814,
    "lon": 11.3813197,
  },
  "1289323267": {
    "lat": 49.3895231,
    "lon": 11.3694837,
  },
  "1289323270": {
    "lat": 49.3962474,
    "lon": 11.3825542,
  },
  "1289323285": {
    "lat": 49.3992984,
    "lon": 11.3871156,
  },
  "1289323286": {
    "lat": 49.3898029,
    "lon": 11.3708538,
  },
  "1289323287": {
    "lat": 49.3992984,
    "lon": 11.3858852,
  },
  "1289323297": {
    "lat": 49.3894425,
    "lon": 11.3693931,
  },
  "1289323301": {
    "lat": 49.3929631,
    "lon": 11.3816244,
  },
  "1340315236": {
    "lat": 49.391943,
    "lon": 11.3795962,
  },
  "1340315256": {
    "lat": 49.3909654,
    "lon": 11.3798644,
  },
  "1340315257": {
    "lat": 49.391105,
    "lon": 11.3799931,
  },
  "1340315259": {
    "lat": 49.3914891,
    "lon": 11.3800575,
  },
  "1340315260": {
    "lat": 49.3916148,
    "lon": 11.3799931,
  },
  "1340315262": {
    "lat": 49.3917335,
    "lon": 11.3798858,
  },
  "1340315263": {
    "lat": 49.3920478,
    "lon": 11.3794781,
  },
  "1340315265": {
    "lat": 49.3921525,
    "lon": 11.3793494,
  },
  "1340315285": {
    "lat": 49.3922782,
    "lon": 11.3792206,
  },
  "1340315290": {
    "lat": 49.3924396,
    "lon": 11.3790467,
  },
  "1340315295": {
    "lat": 49.3908281,
    "lon": 11.3797671,
  },
  "1340315300": {
    "lat": 49.3913774,
    "lon": 11.3800468,
  },
  "1340315306": {
    "lat": 49.3912587,
    "lon": 11.3800253,
  },
  "1340315307": {
    "lat": 49.3918383,
    "lon": 11.3797571,
  },
  "1340334744": {
    "lat": 49.3869792,
    "lon": 11.3744377,
  },
  "1340334745": {
    "lat": 49.3869251,
    "lon": 11.3745637,
  },
  "1340334762": {
    "lat": 49.3873686,
    "lon": 11.3730188,
  },
  "1340334764": {
    "lat": 49.3868081,
    "lon": 11.3747837,
  },
  "1340334767": {
    "lat": 49.387379,
    "lon": 11.3728793,
  },
  "1340334774": {
    "lat": 49.3872708,
    "lon": 11.3732548,
  },
  "1340334776": {
    "lat": 49.3872464,
    "lon": 11.3733809,
  },
  "1340334778": {
    "lat": 49.3871451,
    "lon": 11.3737698,
  },
  "1340334779": {
    "lat": 49.3871416,
    "lon": 11.3738664,
  },
  "1340334780": {
    "lat": 49.3872254,
    "lon": 11.3735203,
  },
  "1340334781": {
    "lat": 49.3873057,
    "lon": 11.373169,
  },
  "1340334782": {
    "lat": 49.387187,
    "lon": 11.373641,
  },
  "1340334784": {
    "lat": 49.3870718,
    "lon": 11.3741373,
  },
  "1340334798": {
    "lat": 49.3871119,
    "lon": 11.3739817,
  },
  "1340334799": {
    "lat": 49.3870543,
    "lon": 11.3742901,
  },
  "1340334801": {
    "lat": 49.3870456,
    "lon": 11.3742258,
  },
  "1340337448": {
    "lat": 49.3867535,
    "lon": 11.3803775,
  },
  "1340337452": {
    "lat": 49.3866767,
    "lon": 11.3805224,
  },
  "1340337459": {
    "lat": 49.3869648,
    "lon": 11.379935,
  },
  "1340337460": {
    "lat": 49.3872459,
    "lon": 11.3791893,
  },
  "1340337463": {
    "lat": 49.387293,
    "lon": 11.3788272,
  },
  "1340337464": {
    "lat": 49.3872791,
    "lon": 11.3786932,
  },
  "1340337469": {
    "lat": 49.3872712,
    "lon": 11.3785537,
  },
  "1401551787": {
    "lat": 49.3931211,
    "lon": 11.3788965,
  },
  "1401551791": {
    "lat": 49.3925415,
    "lon": 11.3790038,
  },
  "1401551808": {
    "lat": 49.3945989,
    "lon": 11.3772733,
  },
  "1401551816": {
    "lat": 49.394015,
    "lon": 11.3782206,
  },
  "1401551820": {
    "lat": 49.3936557,
    "lon": 11.3785333,
  },
  "1401551823": {
    "lat": 49.394326,
    "lon": 11.3778681,
  },
  "1401551826": {
    "lat": 49.3933414,
    "lon": 11.3788123,
  },
  "1436604448": {
    "lat": 49.3858949,
    "lon": 11.3738272,
  },
  "1591497010": {
    "lat": 49.3896643,
    "lon": 11.3593232,
  },
  "1929493470": {
    "lat": 49.3920745,
    "lon": 11.3701111,
  },
  "1929493473": {
    "lat": 49.3915151,
    "lon": 11.370936,
  },
  "1929493475": {
    "lat": 49.3909357,
    "lon": 11.3709277,
  },
  "1929493477": {
    "lat": 49.3924584,
    "lon": 11.3697333,
  },
  "1929493490": {
    "lat": 49.3919036,
    "lon": 11.3708646,
  },
  "1929500413": {
    "lat": 49.3940073,
    "lon": 11.3770504,
  },
  "1929500417": {
    "lat": 49.3936757,
    "lon": 11.3749958,
  },
  "1929500421": {
    "lat": 49.3934068,
    "lon": 11.3734723,
  },
  "1929500423": {
    "lat": 49.3938083,
    "lon": 11.3759774,
  },
  "2011348827": {
    "lat": 49.3941249,
    "lon": 11.3781204,
  },
  "2174081490": {
    "lat": 49.3860886,
    "lon": 11.3814581,
  },
  "2174081491": {
    "lat": 49.3864443,
    "lon": 11.3809278,
  },
  "2174081492": {
    "lat": 49.3872877,
    "lon": 11.3908243,
  },
  "2174081493": {
    "lat": 49.3872336,
    "lon": 11.3893532,
  },
  "2174081494": {
    "lat": 49.3873215,
    "lon": 11.3882825,
  },
  "2174081495": {
    "lat": 49.3874646,
    "lon": 11.3822672,
  },
  "2174081496": {
    "lat": 49.3874777,
    "lon": 11.3817126,
  },
  "2174081497": {
    "lat": 49.3874988,
    "lon": 11.3812269,
  },
  "2174081498": {
    "lat": 49.3876385,
    "lon": 11.3807574,
  },
  "2174081500": {
    "lat": 49.3876802,
    "lon": 11.3874522,
  },
  "2174081501": {
    "lat": 49.387708,
    "lon": 11.3890101,
  },
  "2174081502": {
    "lat": 49.3877491,
    "lon": 11.3805428,
  },
  "2174081504": {
    "lat": 49.387933,
    "lon": 11.3869492,
  },
  "2174081505": {
    "lat": 49.3880098,
    "lon": 11.3894165,
  },
  "2174081507": {
    "lat": 49.3881216,
    "lon": 11.3881056,
  },
  "2174081509": {
    "lat": 49.3883042,
    "lon": 11.3897256,
  },
  "2174081510": {
    "lat": 49.3883824,
    "lon": 11.3885178,
  },
  "2174081516": {
    "lat": 49.3884197,
    "lon": 11.3897771,
  },
  "2174081517": {
    "lat": 49.388442,
    "lon": 11.3894108,
  },
  "2174081519": {
    "lat": 49.3884532,
    "lon": 11.3889185,
  },
  "2174081521": {
    "lat": 49.3885415,
    "lon": 11.3796141,
  },
  "2174081522": {
    "lat": 49.3886123,
    "lon": 11.3855217,
  },
  "2174081531": {
    "lat": 49.3891824,
    "lon": 11.3844455,
  },
  "2174081532": {
    "lat": 49.3893093,
    "lon": 11.3939692,
  },
  "2174081534": {
    "lat": 49.3894246,
    "lon": 11.3769808,
  },
  "2174081535": {
    "lat": 49.3900523,
    "lon": 11.3939694,
  },
  "2174081536": {
    "lat": 49.3900621,
    "lon": 11.3812078,
  },
  "2174081537": {
    "lat": 49.3902736,
    "lon": 11.3941392,
  },
  "2174081538": {
    "lat": 49.3905353,
    "lon": 11.3807041,
  },
  "2174081541": {
    "lat": 49.3908006,
    "lon": 11.3946088,
  },
  "2174081543": {
    "lat": 49.3912384,
    "lon": 11.370833,
  },
  "2174081545": {
    "lat": 49.391337,
    "lon": 11.3949731,
  },
  "2174081547": {
    "lat": 49.3914347,
    "lon": 11.3915807,
  },
  "2174081549": {
    "lat": 49.3914208,
    "lon": 11.3917446,
  },
  "2174081550": {
    "lat": 49.3914541,
    "lon": 11.3914588,
  },
  "2174081552": {
    "lat": 49.3914282,
    "lon": 11.3921797,
  },
  "2174081554": {
    "lat": 49.3914748,
    "lon": 11.3925317,
  },
  "2174081555": {
    "lat": 49.3915448,
    "lon": 11.3912604,
  },
  "2174081557": {
    "lat": 49.3915214,
    "lon": 11.3927922,
  },
  "2174081559": {
    "lat": 49.3915287,
    "lon": 11.3952648,
  },
  "2174081560": {
    "lat": 49.3915642,
    "lon": 11.393067,
  },
  "2174081566": {
    "lat": 49.3916268,
    "lon": 11.3934017,
  },
  "2174081567": {
    "lat": 49.3916928,
    "lon": 11.3910147,
  },
  "2174081569": {
    "lat": 49.391716,
    "lon": 11.3709662,
  },
  "2174081571": {
    "lat": 49.3917412,
    "lon": 11.3937997,
  },
  "2174081572": {
    "lat": 49.3918195,
    "lon": 11.3940372,
  },
  "2174081574": {
    "lat": 49.3918605,
    "lon": 11.390677,
  },
  "2174081576": {
    "lat": 49.3919237,
    "lon": 11.3951389,
  },
  "2174081578": {
    "lat": 49.3919461,
    "lon": 11.3904251,
  },
  "2174081579": {
    "lat": 49.3919499,
    "lon": 11.3942204,
  },
  "2174081581": {
    "lat": 49.3920542,
    "lon": 11.3902276,
  },
  "2174081583": {
    "lat": 49.3920025,
    "lon": 11.3705485,
  },
  "2174081590": {
    "lat": 49.3920877,
    "lon": 11.3943063,
  },
  "2174081591": {
    "lat": 49.3921462,
    "lon": 11.3698903,
  },
  "2174081593": {
    "lat": 49.3922741,
    "lon": 11.3943716,
  },
  "2174081595": {
    "lat": 49.3922648,
    "lon": 11.3697751,
  },
  "2174081597": {
    "lat": 49.392275,
    "lon": 11.3899032,
  },
  "2174081599": {
    "lat": 49.3923655,
    "lon": 11.3697302,
  },
  "2174081600": {
    "lat": 49.392392,
    "lon": 11.389662,
  },
  "2174081602": {
    "lat": 49.3924884,
    "lon": 11.3944098,
  },
  "2174081604": {
    "lat": 49.3924592,
    "lon": 11.389464,
  },
  "2174081606": {
    "lat": 49.3925032,
    "lon": 11.3893089,
  },
  "2174081607": {
    "lat": 49.3925181,
    "lon": 11.3891858,
  },
  "2174081609": {
    "lat": 49.3925796,
    "lon": 11.3890656,
  },
  "2174081611": {
    "lat": 49.3926116,
    "lon": 11.394454,
  },
  "2174081613": {
    "lat": 49.392682,
    "lon": 11.3888566,
  },
  "2174081614": {
    "lat": 49.3927436,
    "lon": 11.3945359,
  },
  "2174081616": {
    "lat": 49.3928199,
    "lon": 11.3885847,
  },
  "2174081618": {
    "lat": 49.3928378,
    "lon": 11.3698568,
  },
  "2174081620": {
    "lat": 49.3929018,
    "lon": 11.3884788,
  },
  "2174081624": {
    "lat": 49.3929826,
    "lon": 11.3699144,
  },
  "2174081625": {
    "lat": 49.3930531,
    "lon": 11.3883724,
  },
  "2174081626": {
    "lat": 49.3929225,
    "lon": 11.3946625,
  },
  "2174081627": {
    "lat": 49.3932152,
    "lon": 11.3706658,
  },
  "2174081628": {
    "lat": 49.3932872,
    "lon": 11.388179,
  },
  "2174081630": {
    "lat": 49.3932821,
    "lon": 11.3717524,
  },
  "2174081631": {
    "lat": 49.3933307,
    "lon": 11.3726861,
  },
  "2174081633": {
    "lat": 49.3934461,
    "lon": 11.3880562,
  },
  "2174081635": {
    "lat": 49.3936703,
    "lon": 11.3943084,
  },
  "2174081636": {
    "lat": 49.3935185,
    "lon": 11.3879785,
  },
  "2174081638": {
    "lat": 49.3935989,
    "lon": 11.387908,
  },
  "2174081645": {
    "lat": 49.393666,
    "lon": 11.3877934,
  },
  "2174081647": {
    "lat": 49.3937625,
    "lon": 11.3876373,
  },
  "2174081649": {
    "lat": 49.3939609,
    "lon": 11.3941695,
  },
  "2174081651": {
    "lat": 49.3939643,
    "lon": 11.3871824,
  },
  "2174081652": {
    "lat": 49.3941466,
    "lon": 11.3941665,
  },
  "2174081654": {
    "lat": 49.3941406,
    "lon": 11.3868052,
  },
  "2174081656": {
    "lat": 49.394266,
    "lon": 11.386463,
  },
  "2174081657": {
    "lat": 49.3943176,
    "lon": 11.3862406,
  },
  "2174081659": {
    "lat": 49.394291,
    "lon": 11.3942311,
  },
  "2174081661": {
    "lat": 49.394353,
    "lon": 11.3859715,
  },
  "2174081663": {
    "lat": 49.3944387,
    "lon": 11.385754,
  },
  "2174081664": {
    "lat": 49.3945784,
    "lon": 11.3854621,
  },
  "2174081666": {
    "lat": 49.3947144,
    "lon": 11.3850528,
  },
  "2174081668": {
    "lat": 49.3947554,
    "lon": 11.3849039,
  },
  "2174081670": {
    "lat": 49.3947647,
    "lon": 11.3846234,
  },
  "2174081671": {
    "lat": 49.3947852,
    "lon": 11.3842857,
  },
  "2174081673": {
    "lat": 49.3948355,
    "lon": 11.3839537,
  },
  "2174081675": {
    "lat": 49.3948541,
    "lon": 11.38349,
  },
  "2174081676": {
    "lat": 49.3948858,
    "lon": 11.3831179,
  },
  "2174081678": {
    "lat": 49.3948998,
    "lon": 11.394566,
  },
  "2174081685": {
    "lat": 49.3951401,
    "lon": 11.3948093,
  },
  "2174081687": {
    "lat": 49.3953059,
    "lon": 11.3949323,
  },
  "2174081689": {
    "lat": 49.3956409,
    "lon": 11.3949392,
  },
  "2287241571": {
    "lat": 49.3908439,
    "lon": 11.3605978,
  },
  "2340751759": {
    "lat": 49.3844892,
    "lon": 11.3856533,
  },
  "2340751761": {
    "lat": 49.385631,
    "lon": 11.386173,
  },
  "2340751762": {
    "lat": 49.3860413,
    "lon": 11.3863768,
  },
  "2340751763": {
    "lat": 49.3852679,
    "lon": 11.3859906,
  },
  "2340751766": {
    "lat": 49.3848959,
    "lon": 11.3858055,
  },
  "2340751767": {
    "lat": 49.384634,
    "lon": 11.3856929,
  },
  "2340751771": {
    "lat": 49.3847749,
    "lon": 11.3860086,
  },
  "2401124158": {
    "lat": 49.3916564,
    "lon": 11.3632338,
  },
  "249631090": {
    "lat": 49.3841285,
    "lon": 11.3942085,
  },
  "249631092": {
    "lat": 49.3842883,
    "lon": 11.3931127,
  },
  "249631096": {
    "lat": 49.3843911,
    "lon": 11.3917559,
  },
  "249631111": {
    "lat": 49.3844758,
    "lon": 11.3911513,
  },
  "249631125": {
    "lat": 49.3846502,
    "lon": 11.3903478,
  },
  "249631138": {
    "lat": 49.3846839,
    "lon": 11.389674,
  },
  "249631147": {
    "lat": 49.3845883,
    "lon": 11.3863218,
  },
  "249631159": {
    "lat": 49.3845489,
    "lon": 11.3859158,
  },
  "249631170": {
    "lat": 49.3843071,
    "lon": 11.3848531,
  },
  "249631181": {
    "lat": 49.3842621,
    "lon": 11.3843779,
  },
  "249631194": {
    "lat": 49.3842283,
    "lon": 11.3813887,
  },
  "249631207": {
    "lat": 49.3843071,
    "lon": 11.3808271,
  },
  "249631218": {
    "lat": 49.384712,
    "lon": 11.3793411,
  },
  "249631221": {
    "lat": 49.3848245,
    "lon": 11.3785981,
  },
  "254044011": {
    "lat": 49.3873004,
    "lon": 11.3726339,
  },
  "254044063": {
    "lat": 49.3858413,
    "lon": 11.3728538,
  },
  "254044099": {
    "lat": 49.388938,
    "lon": 11.3694008,
  },
  "256775725": {
    "lat": 49.3857945,
    "lon": 11.3744838,
  },
  "256922793": {
    "lat": 49.3858428,
    "lon": 11.372929,
  },
  "256923436": {
    "lat": 49.3961262,
    "lon": 11.3862896,
  },
  "259144298": {
    "lat": 49.382636,
    "lon": 11.3783355,
  },
  "259144311": {
    "lat": 49.3836414,
    "lon": 11.3784509,
  },
  "259144312": {
    "lat": 49.3831964,
    "lon": 11.3785031,
  },
  "259144469": {
    "lat": 49.3837693,
    "lon": 11.3783832,
  },
  "259144470": {
    "lat": 49.3838291,
    "lon": 11.3781886,
  },
  "259144471": {
    "lat": 49.3840242,
    "lon": 11.3769456,
  },
  "259144472": {
    "lat": 49.3841499,
    "lon": 11.3758879,
  },
  "259144473": {
    "lat": 49.3841895,
    "lon": 11.3753402,
  },
  "259144474": {
    "lat": 49.3842428,
    "lon": 11.3742239,
  },
  "259144475": {
    "lat": 49.3845022,
    "lon": 11.3728797,
  },
  "2601632496": {
    "lat": 49.3866706,
    "lon": 11.373495,
  },
  "269518571": {
    "lat": 49.3842581,
    "lon": 11.3740564,
  },
  "269518638": {
    "lat": 49.3862573,
    "lon": 11.3735947,
  },
  "269518640": {
    "lat": 49.3859866,
    "lon": 11.3735064,
  },
  "269518641": {
    "lat": 49.3858954,
    "lon": 11.3735253,
  },
  "269521527": {
    "lat": 49.3988191,
    "lon": 11.3887067,
  },
  "269521528": {
    "lat": 49.3989612,
    "lon": 11.3889546,
  },
  "269521529": {
    "lat": 49.3991968,
    "lon": 11.3892226,
  },
  "269521530": {
    "lat": 49.3993245,
    "lon": 11.3895143,
  },
  "269521531": {
    "lat": 49.3992968,
    "lon": 11.3899182,
  },
  "269521532": {
    "lat": 49.3991854,
    "lon": 11.3901473,
  },
  "269521768": {
    "lat": 49.3957659,
    "lon": 11.3779529,
  },
  "269521769": {
    "lat": 49.3957795,
    "lon": 11.3723739,
  },
  "269521780": {
    "lat": 49.3963167,
    "lon": 11.3689242,
  },
  "269521781": {
    "lat": 49.3957069,
    "lon": 11.3717216,
  },
  "2863782729": {
    "lat": 49.3915927,
    "lon": 11.3631665,
  },
  "305253169": {
    "lat": 49.3849156,
    "lon": 11.3930474,
  },
  "305253172": {
    "lat": 49.3859571,
    "lon": 11.3929897,
  },
  "305253174": {
    "lat": 49.387046,
    "lon": 11.3946163,
  },
  "305253418": {
    "lat": 49.3858957,
    "lon": 11.3915735,
  },
  "315495677": {
    "lat": 49.3890007,
    "lon": 11.3694521,
  },
  "315495678": {
    "lat": 49.3892155,
    "lon": 11.3695782,
  },
  "315495679": {
    "lat": 49.3892938,
    "lon": 11.3696898,
  },
  "315495680": {
    "lat": 49.3894535,
    "lon": 11.3700384,
  },
  "315495681": {
    "lat": 49.3896626,
    "lon": 11.3705938,
  },
  "315495682": {
    "lat": 49.3899041,
    "lon": 11.3711051,
  },
  "315495683": {
    "lat": 49.3895951,
    "lon": 11.3719288,
  },
  "315495684": {
    "lat": 49.3894448,
    "lon": 11.3737925,
  },
  "315495685": {
    "lat": 49.3887752,
    "lon": 11.3755539,
  },
  "315495686": {
    "lat": 49.3886272,
    "lon": 11.3754722,
  },
  "315495687": {
    "lat": 49.3882546,
    "lon": 11.3752859,
  },
  "315495688": {
    "lat": 49.3876163,
    "lon": 11.3753272,
  },
  "315495689": {
    "lat": 49.387237,
    "lon": 11.3756481,
  },
  "315495690": {
    "lat": 49.3870927,
    "lon": 11.3765047,
  },
  "315495691": {
    "lat": 49.3871055,
    "lon": 11.3771763,
  },
  "315495694": {
    "lat": 49.3886282,
    "lon": 11.3818781,
  },
  "315495696": {
    "lat": 49.3884725,
    "lon": 11.3820322,
  },
  "315495697": {
    "lat": 49.3875171,
    "lon": 11.382633,
  },
  "315495698": {
    "lat": 49.3874559,
    "lon": 11.3829678,
  },
  "315495699": {
    "lat": 49.3874111,
    "lon": 11.3844611,
  },
  "315495700": {
    "lat": 49.3870143,
    "lon": 11.3864439,
  },
  "315495701": {
    "lat": 49.3865952,
    "lon": 11.3877314,
  },
  "315495702": {
    "lat": 49.3862824,
    "lon": 11.3886584,
  },
  "315495703": {
    "lat": 49.3863606,
    "lon": 11.3890103,
  },
  "315495704": {
    "lat": 49.3864835,
    "lon": 11.389345,
  },
  "315495705": {
    "lat": 49.3865841,
    "lon": 11.3896025,
  },
  "315495706": {
    "lat": 49.3866232,
    "lon": 11.3899716,
  },
  "315495708": {
    "lat": 49.3868243,
    "lon": 11.3920229,
  },
  "315495709": {
    "lat": 49.3870869,
    "lon": 11.3920658,
  },
  "315495710": {
    "lat": 49.3871428,
    "lon": 11.3926237,
  },
  "315495711": {
    "lat": 49.3871699,
    "lon": 11.3931497,
  },
  "315495712": {
    "lat": 49.3870719,
    "lon": 11.393951,
  },
  "315495714": {
    "lat": 49.3868722,
    "lon": 11.3967059,
  },
  "315495715": {
    "lat": 49.3866679,
    "lon": 11.396735,
  },
  "315495716": {
    "lat": 49.3862097,
    "lon": 11.3969239,
  },
  "315495717": {
    "lat": 49.3857247,
    "lon": 11.3969568,
  },
  "315495718": {
    "lat": 49.3854945,
    "lon": 11.3970562,
  },
  "315495719": {
    "lat": 49.3852431,
    "lon": 11.3970183,
  },
  "356839448": {
    "lat": 49.3932198,
    "lon": 11.3690786,
  },
  "356839454": {
    "lat": 49.3916341,
    "lon": 11.3757767,
  },
  "356839458": {
    "lat": 49.3907694,
    "lon": 11.3796704,
  },
  "356839461": {
    "lat": 49.3904319,
    "lon": 11.3810494,
  },
  "356839463": {
    "lat": 49.3896991,
    "lon": 11.381174,
  },
  "3682876372": {
    "lat": 49.395711,
    "lon": 11.376561,
  },
  "380652507": {
    "lat": 49.382997,
    "lon": 11.3784365,
  },
  "381988529": {
    "lat": 49.3841075,
    "lon": 11.3763926,
  },
  "381988530": {
    "lat": 49.3839294,
    "lon": 11.3775299,
  },
  "394764917": {
    "lat": 49.3903797,
    "lon": 11.3708026,
  },
  "394764918": {
    "lat": 49.3905171,
    "lon": 11.3711814,
  },
  "394764926": {
    "lat": 49.3929316,
    "lon": 11.3811075,
  },
  "394764927": {
    "lat": 49.3935287,
    "lon": 11.381046,
  },
  "394764928": {
    "lat": 49.3945645,
    "lon": 11.3817931,
  },
  "394764929": {
    "lat": 49.3948687,
    "lon": 11.3824746,
  },
  "394764931": {
    "lat": 49.3952522,
    "lon": 11.3823171,
  },
  "394764932": {
    "lat": 49.3956455,
    "lon": 11.3825724,
  },
  "394764933": {
    "lat": 49.3962067,
    "lon": 11.3829385,
  },
  "394764934": {
    "lat": 49.396609,
    "lon": 11.3831086,
  },
  "394764935": {
    "lat": 49.3972335,
    "lon": 11.3834394,
  },
  "394764936": {
    "lat": 49.3973877,
    "lon": 11.3835527,
  },
  "394764937": {
    "lat": 49.3974808,
    "lon": 11.3836068,
  },
  "394764939": {
    "lat": 49.3978189,
    "lon": 11.3832372,
  },
  "394764940": {
    "lat": 49.3980092,
    "lon": 11.3837002,
  },
  "394764941": {
    "lat": 49.3982821,
    "lon": 11.3843803,
  },
  "394764942": {
    "lat": 49.3986429,
    "lon": 11.3847368,
  },
  "394764943": {
    "lat": 49.3990169,
    "lon": 11.3848908,
  },
  "394764944": {
    "lat": 49.3991277,
    "lon": 11.3851787,
  },
  "394764945": {
    "lat": 49.399055,
    "lon": 11.3860826,
  },
  "394764946": {
    "lat": 49.3987854,
    "lon": 11.3864515,
  },
  "394764947": {
    "lat": 49.3987338,
    "lon": 11.3874753,
  },
  "394764948": {
    "lat": 49.3987367,
    "lon": 11.3882556,
  },
  "422606063": {
    "lat": 49.389681,
    "lon": 11.3593773,
  },
  "422606065": {
    "lat": 49.3902344,
    "lon": 11.3596436,
  },
  "422606067": {
    "lat": 49.3904171,
    "lon": 11.3597846,
  },
  "422606074": {
    "lat": 49.3906834,
    "lon": 11.3602597,
  },
  "422606076": {
    "lat": 49.3909399,
    "lon": 11.3608287,
  },
  "422606077": {
    "lat": 49.3912121,
    "lon": 11.3617624,
  },
  "422606079": {
    "lat": 49.3915332,
    "lon": 11.3629541,
  },
  "422606081": {
    "lat": 49.3917355,
    "lon": 11.3634517,
  },
  "422606083": {
    "lat": 49.3919031,
    "lon": 11.3638847,
  },
  "422606084": {
    "lat": 49.3919404,
    "lon": 11.3640256,
  },
  "422606086": {
    "lat": 49.3921178,
    "lon": 11.3651571,
  },
  "422606088": {
    "lat": 49.3921788,
    "lon": 11.3656155,
  },
  "422606090": {
    "lat": 49.3923286,
    "lon": 11.3670894,
  },
  "422606091": {
    "lat": 49.3924242,
    "lon": 11.367456,
  },
  "422606093": {
    "lat": 49.3928196,
    "lon": 11.3682932,
  },
  "422606095": {
    "lat": 49.3930187,
    "lon": 11.3687179,
  },
  "422606100": {
    "lat": 49.3939715,
    "lon": 11.3720485,
  },
  "422606102": {
    "lat": 49.3942444,
    "lon": 11.3731114,
  },
  "422606104": {
    "lat": 49.3943568,
    "lon": 11.3742547,
  },
  "422606106": {
    "lat": 49.3943551,
    "lon": 11.3751621,
  },
  "422606107": {
    "lat": 49.3943451,
    "lon": 11.3756853,
  },
  "422606109": {
    "lat": 49.394426,
    "lon": 11.3762791,
  },
  "422606111": {
    "lat": 49.3947671,
    "lon": 11.3783154,
  },
  "422606112": {
    "lat": 49.3950619,
    "lon": 11.3797997,
  },
  "422606114": {
    "lat": 49.3951145,
    "lon": 11.3825199,
  },
  "422606116": {
    "lat": 49.3951252,
    "lon": 11.3826956,
  },
  "422606117": {
    "lat": 49.3951936,
    "lon": 11.3839233,
  },
  "422606119": {
    "lat": 49.3953063,
    "lon": 11.3845408,
  },
  "422606121": {
    "lat": 49.3955948,
    "lon": 11.3854398,
  },
  "422606123": {
    "lat": 49.3964683,
    "lon": 11.3879969,
  },
  "422606124": {
    "lat": 49.3965322,
    "lon": 11.3889252,
  },
  "422606126": {
    "lat": 49.3969243,
    "lon": 11.3908233,
  },
  "422606128": {
    "lat": 49.3973498,
    "lon": 11.3917314,
  },
  "4946913853": {
    "lat": 49.3847178,
    "lon": 11.3861542,
  },
  "4946913854": {
    "lat": 49.3845775,
    "lon": 11.3862106,
  },
  "4946913862": {
    "lat": 49.3849402,
    "lon": 11.3858276,
  },
  "4946953322": {
    "lat": 49.3862304,
    "lon": 11.3894206,
  },
  "4946953323": {
    "lat": 49.3859173,
    "lon": 11.3910681,
  },
  "4946953422": {
    "lat": 49.3850356,
    "lon": 11.3907516,
  },
  "4946953423": {
    "lat": 49.3849605,
    "lon": 11.3914221,
  },
  "4946953424": {
    "lat": 49.3849395,
    "lon": 11.3919935,
  },
  "4946960721": {
    "lat": 49.3862176,
    "lon": 11.3887614,
  },
  "4946960722": {
    "lat": 49.3862096,
    "lon": 11.3898297,
  },
  "4946960723": {
    "lat": 49.3860798,
    "lon": 11.3905816,
  },
  "525646046": {
    "lat": 49.3941408,
    "lon": 11.3813236,
  },
  "5261531221": {
    "lat": 49.3869757,
    "lon": 11.3964335,
  },
  "5261531222": {
    "lat": 49.3872007,
    "lon": 11.3911523,
  },
  "5261531223": {
    "lat": 49.3873149,
    "lon": 11.390012,
  },
  "5379332142": {
    "lat": 49.3826716,
    "lon": 11.3783342,
  },
  "6377218456": {
    "lat": 49.3920281,
    "lon": 11.3643973,
  },
  "6617478701": {
    "lat": 49.3911006,
    "lon": 11.3613012,
  },
  "662330695": {
    "lat": 49.3871477,
    "lon": 11.3759148,
  },
  "662330698": {
    "lat": 49.3870389,
    "lon": 11.3755128,
  },
  "662330702": {
    "lat": 49.3868518,
    "lon": 11.3749315,
  },
  "662330705": {
    "lat": 49.3864663,
    "lon": 11.3739346,
  },
  "662330706": {
    "lat": 49.3889091,
    "lon": 11.3780292,
  },
  "662330709": {
    "lat": 49.3887092,
    "lon": 11.3789001,
  },
  "662330711": {
    "lat": 49.3883909,
    "lon": 11.3800184,
  },
  "662330712": {
    "lat": 49.3882208,
    "lon": 11.3803646,
  },
  "662330715": {
    "lat": 49.3880512,
    "lon": 11.3805129,
  },
  "662330716": {
    "lat": 49.3904061,
    "lon": 11.3756891,
  },
  "662330718": {
    "lat": 49.3900314,
    "lon": 11.375814,
  },
  "662330720": {
    "lat": 49.3914647,
    "lon": 11.3759047,
  },
  "662330721": {
    "lat": 49.3910713,
    "lon": 11.3759181,
  },
  "662330723": {
    "lat": 49.3906995,
    "lon": 11.3757479,
  },
  "662330725": {
    "lat": 49.38973,
    "lon": 11.3762753,
  },
  "662330727": {
    "lat": 49.3890813,
    "lon": 11.3776389,
  },
  "662330734": {
    "lat": 49.388437,
    "lon": 11.3900154,
  },
  "662330736": {
    "lat": 49.3885302,
    "lon": 11.3895284,
  },
  "662330738": {
    "lat": 49.3888584,
    "lon": 11.388927,
  },
  "662330739": {
    "lat": 49.3866836,
    "lon": 11.3906307,
  },
  "662330741": {
    "lat": 49.3867139,
    "lon": 11.3912735,
  },
  "662330742": {
    "lat": 49.3867313,
    "lon": 11.3916524,
  },
  "662330746": {
    "lat": 49.3871532,
    "lon": 11.3923374,
  },
  "662330749": {
    "lat": 49.3889495,
    "lon": 11.3924986,
  },
  "662330751": {
    "lat": 49.3888211,
    "lon": 11.3916251,
  },
  "662330752": {
    "lat": 49.3893737,
    "lon": 11.3878984,
  },
  "662330754": {
    "lat": 49.3900172,
    "lon": 11.3866316,
  },
  "662330756": {
    "lat": 49.3906605,
    "lon": 11.3853242,
  },
  "662330759": {
    "lat": 49.3912657,
    "lon": 11.3842537,
  },
  "662330766": {
    "lat": 49.3914417,
    "lon": 11.3833513,
  },
  "662330768": {
    "lat": 49.3918325,
    "lon": 11.3828013,
  },
  "662330770": {
    "lat": 49.392281,
    "lon": 11.3823146,
  },
  "662330772": {
    "lat": 49.3872433,
    "lon": 11.3946391,
  },
  "662330774": {
    "lat": 49.3875227,
    "lon": 11.3946284,
  },
  "662330776": {
    "lat": 49.3877113,
    "lon": 11.3947142,
  },
  "662330777": {
    "lat": 49.3881129,
    "lon": 11.3944406,
  },
  "662330779": {
    "lat": 49.3885887,
    "lon": 11.3941285,
  },
  "662330781": {
    "lat": 49.3888016,
    "lon": 11.393929,
  },
  "662330782": {
    "lat": 49.3889171,
    "lon": 11.3935187,
  },
  "662330784": {
    "lat": 49.3889207,
    "lon": 11.3931362,
  },
  "804142423": {
    "lat": 49.3969444,
    "lon": 11.3832991,
  },
  "804142429": {
    "lat": 49.3981256,
    "lon": 11.3840195,
  },
  "804142434": {
    "lat": 49.3964467,
    "lon": 11.3829315,
  },
  "804142437": {
    "lat": 49.3976434,
    "lon": 11.3832686,
  },
  "804142442": {
    "lat": 49.390459,
    "lon": 11.3709676,
  },
  "804142447": {
    "lat": 49.3947035,
    "lon": 11.382047,
  },
  "804142449": {
    "lat": 49.3962296,
    "lon": 11.3828158,
  },
  "804142452": {
    "lat": 49.3992092,
    "lon": 11.3856276,
  },
  "804142458": {
    "lat": 49.3959372,
    "lon": 11.3827847,
  },
  "811653157": {
    "lat": 49.3892206,
    "lon": 11.3815763,
  },
  "811653164": {
    "lat": 49.3888707,
    "lon": 11.3818052,
  },
  "811966267": {
    "lat": 49.3872855,
    "lon": 11.3850886,
  },
  "811966344": {
    "lat": 49.3894457,
    "lon": 11.3812058,
  },
  "811966406": {
    "lat": 49.3903154,
    "lon": 11.3816685,
  },
  "811966409": {
    "lat": 49.3901334,
    "lon": 11.3824912,
  },
  "811966413": {
    "lat": 49.389821,
    "lon": 11.3832929,
  },
  "811966415": {
    "lat": 49.3896078,
    "lon": 11.3837628,
  },
  "811966419": {
    "lat": 49.3894755,
    "lon": 11.3840339,
  },
  "811966420": {
    "lat": 49.3890057,
    "lon": 11.3843815,
  },
  "811966423": {
    "lat": 49.3883283,
    "lon": 11.3846712,
  },
  "811966426": {
    "lat": 49.3878395,
    "lon": 11.3848965,
  },
  "8184183310": {
    "lat": 49.3843563,
    "lon": 11.3734524,
  },
  "8184183314": {
    "lat": 49.3834153,
    "lon": 11.3784779,
  },
  "8685674741": {
    "lat": 49.3967501,
    "lon": 11.3903117,
  },
  "8857449826": {
    "lat": 49.3950685,
    "lon": 11.3801578,
  },
  "8857449833": {
    "lat": 49.3965789,
    "lon": 11.3893431,
  },
  "8857449834": {
    "lat": 49.3949528,
    "lon": 11.3828635,
  },
  "8857449835": {
    "lat": 49.3949648,
    "lon": 11.3826921,
  },
  "8857449836": {
    "lat": 49.3951777,
    "lon": 11.3826905,
  },
  "8857449838": {
    "lat": 49.3974834,
    "lon": 11.392091,
  },
  "8857449839": {
    "lat": 49.3974912,
    "lon": 11.3924566,
  },
  "8857449840": {
    "lat": 49.3974561,
    "lon": 11.393026,
  },
  "8857449841": {
    "lat": 49.3974809,
    "lon": 11.3932615,
  },
  "8857449842": {
    "lat": 49.3975646,
    "lon": 11.3934897,
  },
  "8857449843": {
    "lat": 49.3975902,
    "lon": 11.3935372,
  },
  "8857449848": {
    "lat": 49.3952344,
    "lon": 11.3843226,
  },
  "8857449850": {
    "lat": 49.3957719,
    "lon": 11.3758582,
  },
  "8857449851": {
    "lat": 49.3957085,
    "lon": 11.3782729,
  },
  "8857449852": {
    "lat": 49.3956395,
    "lon": 11.3782994,
  },
  "8857449853": {
    "lat": 49.3954973,
    "lon": 11.378279,
  },
  "8857449854": {
    "lat": 49.3948268,
    "lon": 11.3782136,
  },
  "8857449855": {
    "lat": 49.3957598,
    "lon": 11.3780982,
  },
  "8857449856": {
    "lat": 49.3950741,
    "lon": 11.3813963,
  },
  "8857449857": {
    "lat": 49.3946525,
    "lon": 11.3771795,
  },
  "8857449858": {
    "lat": 49.3975374,
    "lon": 11.3924863,
  },
  "8857449859": {
    "lat": 49.3974893,
    "lon": 11.3924878,
  },
  "8857449860": {
    "lat": 49.3975357,
    "lon": 11.3922655,
  },
  "8857449861": {
    "lat": 49.3974872,
    "lon": 11.3922714,
  },
  "8857467512": {
    "lat": 49.3951283,
    "lon": 11.3799269,
  },
  "8857467513": {
    "lat": 49.3950652,
    "lon": 11.3799774,
  },
  "8857479484": {
    "lat": 49.3943133,
    "lon": 11.3734897,
  },
  "8857479485": {
    "lat": 49.3943519,
    "lon": 11.3733504,
  },
  "8857479486": {
    "lat": 49.3943093,
    "lon": 11.3734675,
  },
  "9065489209": {
    "lat": 49.3867735,
    "lon": 11.3915633,
  },
  "9127183088": {
    "lat": 49.3941159,
    "lon": 11.3775551,
  },
  "9127183089": {
    "lat": 49.3938994,
    "lon": 11.3766324,
  },
  "9163051366": {
    "lat": 49.3946588,
    "lon": 11.3819653,
  },
  "9163051367": {
    "lat": 49.3948107,
    "lon": 11.3817179,
  },
  "9163051368": {
    "lat": 49.3948456,
    "lon": 11.3814497,
  },
  "9163051369": {
    "lat": 49.3947933,
    "lon": 11.3811761,
  },
  "9163051370": {
    "lat": 49.3946676,
    "lon": 11.3806611,
  },
  "9163051371": {
    "lat": 49.3945593,
    "lon": 11.3802266,
  },
  "9163051372": {
    "lat": 49.3944197,
    "lon": 11.3797116,
  },
  "9163051373": {
    "lat": 49.3943114,
    "lon": 11.3792396,
  },
  "9163051374": {
    "lat": 49.3942137,
    "lon": 11.3788694,
  },
  "9163051375": {
    "lat": 49.3941648,
    "lon": 11.3784456,
  },
  "9165215676": {
    "lat": 49.3895392,
    "lon": 11.3839033,
  },
  "9165215677": {
    "lat": 49.3905039,
    "lon": 11.3856425,
  },
  "937133981": {
    "lat": 49.3863838,
    "lon": 11.3859954,
  },
  "938736335": {
    "lat": 49.3959352,
    "lon": 11.3862,
  },
  "938736389": {
    "lat": 49.3965019,
    "lon": 11.3883361,
  },
  "938736391": {
    "lat": 49.3962874,
    "lon": 11.3872315,
  },
  "944512099": {
    "lat": 49.3920627,
    "lon": 11.3646381,
  },
  "9553839397": {
    "lat": 49.3944954,
    "lon": 11.3928927,
  },
  "9553839398": {
    "lat": 49.394621,
    "lon": 11.3926683,
  },
  "9553839399": {
    "lat": 49.3950285,
    "lon": 11.3915726,
  },
  "9553839400": {
    "lat": 49.3956432,
    "lon": 11.3910873,
  },
  "9553839401": {
    "lat": 49.3968725,
    "lon": 11.3906711,
  },
  "9553849142": {
    "lat": 49.3964181,
    "lon": 11.3907744,
  },
  "9553849143": {
    "lat": 49.396291,
    "lon": 11.3909254,
  },
  "9570597365": {
    "lat": 49.3929964,
    "lon": 11.3692471,
  },
  "9570597366": {
    "lat": 49.3927621,
    "lon": 11.3695427,
  },
  "9570597367": {
    "lat": 49.3925217,
    "lon": 11.369743,
  },
  "9570597368": {
    "lat": 49.3930839,
    "lon": 11.369196,
  },
  "9587919232": {
    "lat": 49.386953,
    "lon": 11.393499,
  },
  "9587919233": {
    "lat": 49.3870158,
    "lon": 11.3937039,
  },
  "9587919234": {
    "lat": 49.3870926,
    "lon": 11.3937818,
  },
  "9838411154": {
    "lat": 49.3873177,
    "lon": 11.3727186,
  },
  "9935955741": {
    "lat": 49.3865737,
    "lon": 11.3967738,
  },
  "9950138766": {
    "lat": 49.3937507,
    "lon": 11.3685014,
  },
  "9950138767": {
    "lat": 49.395511,
    "lon": 11.3680123,
  },
  "9950138768": {
    "lat": 49.3954545,
    "lon": 11.3681377,
  },
  "9950138769": {
    "lat": 49.3954021,
    "lon": 11.3682254,
  },
  "9950138770": {
    "lat": 49.3953355,
    "lon": 11.3683095,
  },
  "9950138771": {
    "lat": 49.3952309,
    "lon": 11.3683497,
  },
  "9950138772": {
    "lat": 49.3951072,
    "lon": 11.3683899,
  },
  "9950138773": {
    "lat": 49.3950192,
    "lon": 11.3683789,
  },
  "9950138774": {
    "lat": 49.3949241,
    "lon": 11.3682876,
  },
  "9950138775": {
    "lat": 49.3948147,
    "lon": 11.3682108,
  },
  "9950138776": {
    "lat": 49.3946838,
    "lon": 11.3681633,
  },
  "9950138777": {
    "lat": 49.3945245,
    "lon": 11.3681414,
  },
  "9950138778": {
    "lat": 49.3943604,
    "lon": 11.3681414,
  },
  "9950138779": {
    "lat": 49.3942177,
    "lon": 11.368156,
  },
  "9950138780": {
    "lat": 49.3940821,
    "lon": 11.3682108,
  },
  "9950138781": {
    "lat": 49.3939584,
    "lon": 11.3683095,
  },
  "9950138782": {
    "lat": 49.3938133,
    "lon": 11.3684338,
  },
  "9950138783": {
    "lat": 49.3936611,
    "lon": 11.3685982,
  },
  "9950138784": {
    "lat": 49.3934042,
    "lon": 11.368865,
  },
  "9950138785": {
    "lat": 49.393172,
    "lon": 11.3691767,
  },
  "9955281529": {
    "lat": 49.393072,
    "lon": 11.3701013,
  },
  "9955281530": {
    "lat": 49.3906374,
    "lon": 11.3711447,
  },
  "9955281531": {
    "lat": 49.3874032,
    "lon": 11.3754684,
  },
  "9955281532": {
    "lat": 49.3879496,
    "lon": 11.3752538,
  },
  "9955281533": {
    "lat": 49.3870802,
    "lon": 11.3767974,
  },
  "9955281534": {
    "lat": 49.387184,
    "lon": 11.37794,
  },
  "9955281535": {
    "lat": 49.3888366,
    "lon": 11.3754523,
  },
  "9955281536": {
    "lat": 49.3887213,
    "lon": 11.3755435,
  },
  "9955281537": {
    "lat": 49.3895419,
    "lon": 11.3723302,
  },
  "9955281538": {
    "lat": 49.3893848,
    "lon": 11.3740522,
  },
  "9955281539": {
    "lat": 49.3894808,
    "lon": 11.3734406,
  },
  "9955281540": {
    "lat": 49.3896973,
    "lon": 11.371555,
  },
  "9955281541": {
    "lat": 49.3918185,
    "lon": 11.3709515,
  },
  "9955281542": {
    "lat": 49.3919564,
    "lon": 11.3707222,
  },
  "9955281543": {
    "lat": 49.3907413,
    "lon": 11.371083,
  },
  "9955281547": {
    "lat": 49.3932259,
    "lon": 11.3693848,
  },
  "9974084442": {
    "lat": 49.3942135,
    "lon": 11.3941925,
  },
  "9981403920": {
    "lat": 49.3901629,
    "lon": 11.3698576,
  },
  "9981403922": {
    "lat": 49.3899143,
    "lon": 11.3696301,
  },
}
`;

exports[`Parser tests > extractNodesAndWays and extractSegmentsAndPoints with real data 2`] = `
{
  "1037085574": {
    "nodes": [
      2174081652,
      9553839397,
      9553839398,
      9553839399,
      9553839400,
      9553849143,
      9553849142,
      9553839401,
      10721551219,
    ],
  },
  "1039298160": {
    "nodes": [
      9950138785,
      9570597368,
      9570597365,
      9570597366,
      9570597367,
    ],
  },
  "1041447678": {
    "nodes": [
      315495708,
      9587919232,
      9587919233,
      9587919234,
    ],
  },
  "1050233222": {
    "nodes": [
      394764937,
      256923436,
    ],
  },
  "1085908871": {
    "nodes": [
      356839448,
      9950138784,
      9950138783,
      9950138766,
      9950138782,
      9950138781,
      9950138780,
      9950138779,
      9950138778,
      9950138777,
      9950138776,
      9950138775,
      9950138774,
      9950138773,
      9950138772,
      9950138771,
      9950138770,
      9950138769,
      9950138768,
      9950138767,
    ],
  },
  "1088711835": {
    "nodes": [
      2174081659,
      2174081678,
      2174081685,
      2174081687,
      2174081689,
    ],
  },
  "1088711836": {
    "nodes": [
      9974084442,
      2174081659,
    ],
  },
  "1089652920": {
    "nodes": [
      394764917,
      9981403920,
      9981403922,
      1289323267,
    ],
  },
  "1092584070": {
    "nodes": [
      811966267,
      10006197522,
      10006197523,
      10006197524,
      937133981,
    ],
  },
  "110335940": {
    "nodes": [
      315495701,
      1260279919,
      1260279914,
    ],
  },
  "1103867429": {
    "nodes": [
      315495708,
      315495709,
      662330746,
      315495710,
      315495711,
      9587919234,
      315495712,
      305253174,
      5261531221,
      315495714,
      315495715,
      9935955741,
      315495716,
      315495717,
      315495718,
      315495719,
      11329057425,
    ],
  },
  "1103867430": {
    "nodes": [
      315495702,
      315495703,
      315495704,
      315495705,
      315495706,
      662330739,
      662330741,
      9065489209,
      662330742,
      315495708,
    ],
  },
  "113734619": {
    "nodes": [
      804142452,
      1289323287,
      1289323251,
      1289323232,
      1289323285,
      1289323262,
    ],
  },
  "113734621": {
    "nodes": [
      804142449,
      1289323270,
      1289323248,
    ],
  },
  "113734622": {
    "nodes": [
      394764926,
      1289323265,
      1289323243,
      1289323301,
    ],
  },
  "113734624": {
    "nodes": [
      254044099,
      1289323261,
      1289323237,
      1289323297,
      1289323267,
      1289323245,
      315495680,
    ],
  },
  "1151586922": {
    "nodes": [
      10712699128,
      422606128,
      8857449838,
      8857449861,
      8857449839,
      8857449859,
      8857449840,
      8857449841,
      8857449842,
      8857449843,
    ],
  },
  "1189128669": {
    "nodes": [
      11042105000,
      11042105001,
      11042105002,
      11042105003,
      11042105004,
      11042120005,
      11042120006,
      11042120007,
      11042120008,
      11042120009,
      11042120010,
    ],
  },
  "1189128670": {
    "nodes": [
      11042120011,
      2174081510,
    ],
  },
  "1190583931": {
    "nodes": [
      394764948,
      11054704121,
      11054704122,
      11054704124,
    ],
  },
  "1190583932": {
    "nodes": [
      11054704124,
      11054704125,
    ],
  },
  "1190584757": {
    "nodes": [
      11054704125,
      11054684064,
      11054687399,
      11054684065,
    ],
  },
  "119227724": {
    "nodes": [
      356839458,
      1340315295,
      1340315256,
      1340315257,
      1340315306,
      1340315300,
      1340315259,
      1340315260,
      1340315262,
      1340315307,
      1340315236,
      1340315263,
      1340315265,
      1340315285,
      1340315290,
    ],
  },
  "119231706": {
    "nodes": [
      254044011,
      9838411154,
      1340334767,
      1340334762,
      1340334781,
      1340334774,
      1340334776,
      1340334780,
      1340334782,
      1340334778,
      1340334779,
      1340334798,
      1340334784,
      1340334801,
      1340334799,
      1340334744,
      1340334745,
      1340334764,
    ],
  },
  "119232136": {
    "nodes": [
      1340337469,
      1340337464,
      1340337463,
      1340337460,
      1340337459,
      1340337448,
      1340337452,
      2174081491,
      2174081490,
    ],
  },
  "1201409918": {
    "nodes": [
      8857449836,
      11138718785,
      394764931,
    ],
  },
  "126434813": {
    "nodes": [
      269521781,
      269521769,
      8857449850,
      3682876372,
      269521768,
      8857449855,
      8857449851,
      8857449852,
      8857449853,
      8857449854,
    ],
  },
  "126434815": {
    "nodes": [
      1401551808,
      1401551823,
      2011348827,
      1401551816,
      1401551820,
      1401551826,
      1401551787,
      1401551791,
      1340315290,
    ],
  },
  "130432810": {
    "nodes": [
      1436604448,
      269518641,
      256922793,
      254044063,
    ],
  },
  "182593999": {
    "nodes": [
      394764918,
      9955281530,
      9955281543,
      1929493475,
      2174081543,
      1929493473,
      2174081569,
      9955281541,
      1929493490,
      9955281542,
      2174081583,
      1929493470,
      2174081591,
      2174081595,
      2174081599,
      1929493477,
      9570597367,
      2174081618,
      2174081624,
      9955281529,
      2174081627,
      2174081630,
      2174081631,
      1929500421,
      1929500417,
      1929500423,
      9127183089,
      1929500413,
      9127183088,
      2011348827,
      9163051375,
      9163051374,
      9163051373,
      9163051372,
      9163051371,
      9163051370,
      9163051369,
      9163051368,
      9163051367,
      9163051366,
    ],
  },
  "207244575": {
    "nodes": [
      315495709,
      5261531222,
      2174081492,
      5261531223,
      2174081493,
      2174081494,
      1260279914,
      2174081500,
      2174081504,
      1260279916,
      2174081522,
      2174081531,
      811966419,
    ],
  },
  "207244576": {
    "nodes": [
      662330781,
      2174081532,
      11042105000,
      2174081535,
      2174081537,
      2174081541,
      2174081545,
      2174081559,
      2174081576,
      2174081626,
      2174081635,
      2174081649,
      2174081652,
      9974084442,
    ],
  },
  "207244577": {
    "nodes": [
      2174081494,
      2174081501,
      2174081505,
      2174081509,
      2174081516,
    ],
  },
  "207244578": {
    "nodes": [
      811966419,
      811966420,
      811966423,
      811966426,
      811966267,
    ],
  },
  "207244579": {
    "nodes": [
      8857449835,
      8857449834,
      2174081676,
      2174081675,
      2174081673,
      2174081671,
      2174081670,
      2174081668,
      2174081666,
      2174081664,
      2174081663,
      2174081661,
      2174081657,
      2174081656,
      2174081654,
      2174081651,
      2174081647,
      2174081645,
      2174081638,
      2174081636,
      2174081633,
      2174081628,
      2174081625,
      2174081620,
      2174081616,
      2174081613,
      2174081609,
      2174081607,
      2174081606,
      2174081604,
      2174081600,
      2174081597,
      2174081581,
      2174081578,
      2174081574,
      2174081567,
      2174081555,
      2174081550,
      2174081547,
      2174081549,
      2174081552,
      2174081554,
      2174081557,
      2174081560,
      2174081566,
      2174081571,
      2174081572,
      2174081579,
      2174081590,
      2174081593,
      2174081602,
      2174081611,
      2174081614,
      2174081626,
    ],
  },
  "207244580": {
    "nodes": [
      2174081516,
      2174081517,
      2174081519,
      2174081510,
      2174081507,
      2174081500,
    ],
  },
  "207244581": {
    "nodes": [
      315495697,
      2174081495,
      2174081496,
      2174081497,
      2174081498,
      2174081502,
    ],
  },
  "225273874": {
    "nodes": [
      2340751762,
      2340751761,
      2340751763,
      4946913862,
      2340751766,
      2340751767,
      2340751759,
    ],
  },
  "23908487": {
    "nodes": [
      259144475,
      8184183310,
      269518571,
      259144474,
      259144473,
      259144472,
      381988529,
      259144471,
      381988530,
      259144470,
      259144469,
      259144311,
      8184183314,
      259144312,
      380652507,
      5379332142,
      259144298,
    ],
  },
  "24807526": {
    "nodes": [
      269521780,
      269521781,
    ],
  },
  "254368716": {
    "nodes": [
      269518638,
      2601632496,
    ],
  },
  "27802253": {
    "nodes": [
      305253418,
      4946953323,
      4946960723,
      4946960722,
      4946953322,
      4946960721,
      315495702,
    ],
  },
  "28699204": {
    "nodes": [
      254044099,
      315495677,
      315495678,
      315495679,
      315495680,
      1289323233,
      315495681,
      1289323286,
      315495682,
    ],
  },
  "31869820": {
    "nodes": [
      356839448,
      9950138785,
      2174081624,
      356839454,
      356839458,
      2174081538,
      356839461,
      2174081536,
      356839463,
      811966344,
      811653157,
      811653164,
      315495694,
    ],
  },
  "33508248": {
    "nodes": [
      249631090,
      249631092,
      249631096,
      249631111,
      249631125,
      249631138,
      249631147,
      4946913854,
      249631159,
      2340751759,
    ],
  },
  "34385856": {
    "nodes": [
      315495682,
      9955281540,
      315495683,
      9955281537,
      9955281539,
      315495684,
      9955281538,
      9955281535,
      315495685,
      9955281536,
      315495686,
      315495687,
      9955281532,
      315495688,
      9955281531,
      315495689,
      662330695,
      315495690,
      9955281533,
      315495691,
      9955281534,
      1340337469,
      662330715,
      315495694,
      315495696,
      315495697,
      315495698,
      315495699,
      811966267,
      315495700,
      315495701,
      315495702,
    ],
  },
  "34385857": {
    "nodes": [
      315495682,
      1289323263,
      1289323238,
      394764917,
      804142442,
      394764918,
      356839454,
      1340315290,
      394764926,
      394764927,
      525646046,
      394764928,
      9163051366,
      804142447,
      394764929,
      8857449835,
      422606116,
    ],
  },
  "34385858": {
    "nodes": [
      269521527,
      269521528,
      269521529,
      269521530,
      269521531,
      269521532,
    ],
  },
  "36201852": {
    "nodes": [
      1591497010,
      422606063,
      11159904705,
      422606065,
      11159845004,
      422606067,
      422606074,
      2287241571,
      422606076,
      6617478701,
      422606077,
      10721551215,
      10721551217,
      422606079,
      2863782729,
      2401124158,
      422606081,
      422606083,
      422606084,
      6377218456,
      944512099,
      422606086,
      422606088,
      422606090,
      422606091,
      422606093,
      422606095,
      9950138785,
      9955281547,
      422606100,
      422606102,
      8857479486,
      8857479484,
      422606104,
      422606106,
      422606107,
      422606109,
      1401551808,
      422606111,
      422606112,
      8857467513,
      8857449826,
      8857449856,
      422606114,
      422606116,
      422606117,
      8857449848,
      422606119,
      422606121,
      938736335,
      938736391,
      422606123,
      938736389,
      422606124,
      8857449833,
      8685674741,
      9553839401,
      422606126,
      10712699128,
    ],
  },
  "42206235": {
    "nodes": [
      394764931,
      394764932,
      804142458,
      394764933,
      804142449,
      804142434,
      394764934,
      804142423,
      394764935,
      394764936,
      394764937,
    ],
  },
  "504542879": {
    "nodes": [
      2340751759,
      249631170,
      249631181,
      249631194,
      249631207,
      249631218,
      249631221,
      256775725,
      1436604448,
    ],
  },
  "504542880": {
    "nodes": [
      2340751766,
      2340751771,
      4946913853,
      4946913854,
    ],
  },
  "504548285": {
    "nodes": [
      305253169,
      4946953424,
      4946953423,
      4946953422,
    ],
  },
  "504548365": {
    "nodes": [
      305253172,
      305253418,
    ],
  },
  "51912061": {
    "nodes": [
      305253174,
      662330772,
      662330774,
      662330776,
      662330777,
      662330779,
      662330781,
      662330782,
      662330784,
      662330749,
      662330751,
      662330734,
      2174081516,
      662330736,
      11042120011,
      662330738,
      1260279909,
      662330752,
      662330754,
      9165215677,
      662330756,
      662330759,
      662330766,
      662330768,
      662330770,
      394764926,
    ],
  },
  "51912062": {
    "nodes": [
      356839454,
      662330720,
      1289323259,
      662330721,
      662330723,
      662330716,
      662330718,
      662330725,
      2174081534,
      662330727,
      662330706,
      662330709,
      2174081521,
      662330711,
      662330712,
      662330715,
    ],
  },
  "51912063": {
    "nodes": [
      269518638,
      269518640,
      269518641,
    ],
  },
  "51912065": {
    "nodes": [
      662330695,
      662330698,
      662330702,
      1340334764,
      662330705,
      269518638,
    ],
  },
  "66350739": {
    "nodes": [
      394764946,
      1289323258,
      394764947,
      394764948,
      269521527,
    ],
  },
  "66350741": {
    "nodes": [
      394764937,
      804142437,
      394764939,
      394764940,
      804142429,
      394764941,
      394764942,
      394764943,
      394764944,
      804142452,
      394764945,
      394764946,
    ],
  },
  "67239462": {
    "nodes": [
      356839461,
      811966406,
      811966409,
      811966413,
      811966415,
      9165215676,
      811966419,
    ],
  },
  "67239473": {
    "nodes": [
      315495694,
      811966419,
    ],
  },
  "957200847": {
    "nodes": [
      8857449836,
      422606116,
    ],
  },
  "957200848": {
    "nodes": [
      8857449854,
      422606111,
    ],
  },
  "957200849": {
    "nodes": [
      8857449857,
      1401551808,
    ],
  },
  "957200850": {
    "nodes": [
      8857449858,
      8857449859,
    ],
  },
  "957200851": {
    "nodes": [
      8857449860,
      8857449861,
    ],
  },
  "957201355": {
    "nodes": [
      8857467512,
      8857467513,
    ],
  },
  "957201477": {
    "nodes": [
      8857479485,
      8857479486,
    ],
  },
  "991972440": {
    "nodes": [
      9165215676,
      9165215677,
    ],
  },
}
`;

exports[`Parser tests > extractNodesAndWays and extractSegmentsAndPoints with real data 3`] = `
{
  "1037085574-0": {
    "nodes": [
      2174081652,
    ],
  },
  "1037085574-7": {
    "nodes": [
      2174081652,
      9553839397,
      9553839398,
      9553839399,
      9553839400,
      9553849143,
      9553849142,
      9553839401,
    ],
  },
  "1037085574-X": {
    "nodes": [
      9553839401,
      10721551219,
    ],
  },
  "1039298160-0": {
    "nodes": [
      9950138785,
    ],
  },
  "1039298160-4": {
    "nodes": [
      9950138785,
      9570597368,
      9570597365,
      9570597366,
      9570597367,
    ],
  },
  "1039298160-X": {
    "nodes": [
      9570597367,
    ],
  },
  "1041447678-0": {
    "nodes": [
      315495708,
    ],
  },
  "1041447678-3": {
    "nodes": [
      315495708,
      9587919232,
      9587919233,
      9587919234,
    ],
  },
  "1041447678-X": {
    "nodes": [
      9587919234,
    ],
  },
  "1050233222-0": {
    "nodes": [
      394764937,
    ],
  },
  "1050233222-X": {
    "nodes": [
      394764937,
      256923436,
    ],
  },
  "1085908871-0": {
    "nodes": [
      356839448,
    ],
  },
  "1085908871-X": {
    "nodes": [
      356839448,
      9950138784,
      9950138783,
      9950138766,
      9950138782,
      9950138781,
      9950138780,
      9950138779,
      9950138778,
      9950138777,
      9950138776,
      9950138775,
      9950138774,
      9950138773,
      9950138772,
      9950138771,
      9950138770,
      9950138769,
      9950138768,
      9950138767,
    ],
  },
  "1088711835-0": {
    "nodes": [
      2174081659,
    ],
  },
  "1088711835-X": {
    "nodes": [
      2174081659,
      2174081678,
      2174081685,
      2174081687,
      2174081689,
    ],
  },
  "1088711836-0": {
    "nodes": [
      9974084442,
    ],
  },
  "1088711836-1": {
    "nodes": [
      9974084442,
      2174081659,
    ],
  },
  "1088711836-X": {
    "nodes": [
      2174081659,
    ],
  },
  "1089652920-0": {
    "nodes": [
      394764917,
    ],
  },
  "1089652920-3": {
    "nodes": [
      394764917,
      9981403920,
      9981403922,
      1289323267,
    ],
  },
  "1089652920-X": {
    "nodes": [
      1289323267,
    ],
  },
  "1092584070-0": {
    "nodes": [
      811966267,
    ],
  },
  "1092584070-X": {
    "nodes": [
      811966267,
      10006197522,
      10006197523,
      10006197524,
      937133981,
    ],
  },
  "110335940-0": {
    "nodes": [
      315495701,
    ],
  },
  "110335940-2": {
    "nodes": [
      315495701,
      1260279919,
      1260279914,
    ],
  },
  "110335940-X": {
    "nodes": [
      1260279914,
    ],
  },
  "1103867429-0": {
    "nodes": [
      315495708,
    ],
  },
  "1103867429-1": {
    "nodes": [
      315495708,
      315495709,
    ],
  },
  "1103867429-5": {
    "nodes": [
      315495709,
      662330746,
      315495710,
      315495711,
      9587919234,
    ],
  },
  "1103867429-7": {
    "nodes": [
      9587919234,
      315495712,
      305253174,
    ],
  },
  "1103867429-X": {
    "nodes": [
      305253174,
      5261531221,
      315495714,
      315495715,
      9935955741,
      315495716,
      315495717,
      315495718,
      315495719,
      11329057425,
    ],
  },
  "1103867430-0": {
    "nodes": [
      315495702,
    ],
  },
  "1103867430-9": {
    "nodes": [
      315495702,
      315495703,
      315495704,
      315495705,
      315495706,
      662330739,
      662330741,
      9065489209,
      662330742,
      315495708,
    ],
  },
  "1103867430-X": {
    "nodes": [
      315495708,
    ],
  },
  "113734619-0": {
    "nodes": [
      804142452,
    ],
  },
  "113734619-X": {
    "nodes": [
      804142452,
      1289323287,
      1289323251,
      1289323232,
      1289323285,
      1289323262,
    ],
  },
  "113734621-0": {
    "nodes": [
      804142449,
    ],
  },
  "113734621-X": {
    "nodes": [
      804142449,
      1289323270,
      1289323248,
    ],
  },
  "113734622-0": {
    "nodes": [
      394764926,
    ],
  },
  "113734622-X": {
    "nodes": [
      394764926,
      1289323265,
      1289323243,
      1289323301,
    ],
  },
  "113734624-0": {
    "nodes": [
      254044099,
    ],
  },
  "113734624-4": {
    "nodes": [
      254044099,
      1289323261,
      1289323237,
      1289323297,
      1289323267,
    ],
  },
  "113734624-6": {
    "nodes": [
      1289323267,
      1289323245,
      315495680,
    ],
  },
  "113734624-X": {
    "nodes": [
      315495680,
    ],
  },
  "1151586922-0": {
    "nodes": [
      10712699128,
    ],
  },
  "1151586922-3": {
    "nodes": [
      10712699128,
      422606128,
      8857449838,
      8857449861,
    ],
  },
  "1151586922-5": {
    "nodes": [
      8857449861,
      8857449839,
      8857449859,
    ],
  },
  "1151586922-X": {
    "nodes": [
      8857449859,
      8857449840,
      8857449841,
      8857449842,
      8857449843,
    ],
  },
  "1189128669-0": {
    "nodes": [
      11042105000,
    ],
  },
  "1189128669-X": {
    "nodes": [
      11042105000,
      11042105001,
      11042105002,
      11042105003,
      11042105004,
      11042120005,
      11042120006,
      11042120007,
      11042120008,
      11042120009,
      11042120010,
    ],
  },
  "1189128670-0": {
    "nodes": [
      11042120011,
    ],
  },
  "1189128670-1": {
    "nodes": [
      11042120011,
      2174081510,
    ],
  },
  "1189128670-X": {
    "nodes": [
      2174081510,
    ],
  },
  "1190583931-0": {
    "nodes": [
      394764948,
    ],
  },
  "1190583931-3": {
    "nodes": [
      394764948,
      11054704121,
      11054704122,
      11054704124,
    ],
  },
  "1190583931-X": {
    "nodes": [
      11054704124,
    ],
  },
  "1190583932-0": {
    "nodes": [
      11054704124,
    ],
  },
  "1190583932-1": {
    "nodes": [
      11054704124,
      11054704125,
    ],
  },
  "1190583932-X": {
    "nodes": [
      11054704125,
    ],
  },
  "1190584757-0": {
    "nodes": [
      11054704125,
    ],
  },
  "1190584757-X": {
    "nodes": [
      11054704125,
      11054684064,
      11054687399,
      11054684065,
    ],
  },
  "119227724-0": {
    "nodes": [
      356839458,
    ],
  },
  "119227724-14": {
    "nodes": [
      356839458,
      1340315295,
      1340315256,
      1340315257,
      1340315306,
      1340315300,
      1340315259,
      1340315260,
      1340315262,
      1340315307,
      1340315236,
      1340315263,
      1340315265,
      1340315285,
      1340315290,
    ],
  },
  "119227724-X": {
    "nodes": [
      1340315290,
    ],
  },
  "119231706-17": {
    "nodes": [
      254044011,
      9838411154,
      1340334767,
      1340334762,
      1340334781,
      1340334774,
      1340334776,
      1340334780,
      1340334782,
      1340334778,
      1340334779,
      1340334798,
      1340334784,
      1340334801,
      1340334799,
      1340334744,
      1340334745,
      1340334764,
    ],
  },
  "119231706-X": {
    "nodes": [
      1340334764,
    ],
  },
  "119232136-0": {
    "nodes": [
      1340337469,
    ],
  },
  "119232136-X": {
    "nodes": [
      1340337469,
      1340337464,
      1340337463,
      1340337460,
      1340337459,
      1340337448,
      1340337452,
      2174081491,
      2174081490,
    ],
  },
  "1201409918-0": {
    "nodes": [
      8857449836,
    ],
  },
  "1201409918-2": {
    "nodes": [
      8857449836,
      11138718785,
      394764931,
    ],
  },
  "1201409918-X": {
    "nodes": [
      394764931,
    ],
  },
  "126434813-0": {
    "nodes": [
      269521781,
    ],
  },
  "126434813-9": {
    "nodes": [
      269521781,
      269521769,
      8857449850,
      3682876372,
      269521768,
      8857449855,
      8857449851,
      8857449852,
      8857449853,
      8857449854,
    ],
  },
  "126434813-X": {
    "nodes": [
      8857449854,
    ],
  },
  "126434815-0": {
    "nodes": [
      1401551808,
    ],
  },
  "126434815-2": {
    "nodes": [
      1401551808,
      1401551823,
      2011348827,
    ],
  },
  "126434815-8": {
    "nodes": [
      2011348827,
      1401551816,
      1401551820,
      1401551826,
      1401551787,
      1401551791,
      1340315290,
    ],
  },
  "126434815-X": {
    "nodes": [
      1340315290,
    ],
  },
  "130432810-0": {
    "nodes": [
      1436604448,
    ],
  },
  "130432810-1": {
    "nodes": [
      1436604448,
      269518641,
    ],
  },
  "130432810-X": {
    "nodes": [
      269518641,
      256922793,
      254044063,
    ],
  },
  "182593999-0": {
    "nodes": [
      394764918,
    ],
  },
  "182593999-16": {
    "nodes": [
      394764918,
      9955281530,
      9955281543,
      1929493475,
      2174081543,
      1929493473,
      2174081569,
      9955281541,
      1929493490,
      9955281542,
      2174081583,
      1929493470,
      2174081591,
      2174081595,
      2174081599,
      1929493477,
      9570597367,
    ],
  },
  "182593999-18": {
    "nodes": [
      9570597367,
      2174081618,
      2174081624,
    ],
  },
  "182593999-29": {
    "nodes": [
      2174081624,
      9955281529,
      2174081627,
      2174081630,
      2174081631,
      1929500421,
      1929500417,
      1929500423,
      9127183089,
      1929500413,
      9127183088,
      2011348827,
    ],
  },
  "182593999-39": {
    "nodes": [
      2011348827,
      9163051375,
      9163051374,
      9163051373,
      9163051372,
      9163051371,
      9163051370,
      9163051369,
      9163051368,
      9163051367,
      9163051366,
    ],
  },
  "182593999-X": {
    "nodes": [
      9163051366,
    ],
  },
  "207244575-0": {
    "nodes": [
      315495709,
    ],
  },
  "207244575-12": {
    "nodes": [
      2174081500,
      2174081504,
      1260279916,
      2174081522,
      2174081531,
      811966419,
    ],
  },
  "207244575-5": {
    "nodes": [
      315495709,
      5261531222,
      2174081492,
      5261531223,
      2174081493,
      2174081494,
    ],
  },
  "207244575-6": {
    "nodes": [
      2174081494,
      1260279914,
    ],
  },
  "207244575-7": {
    "nodes": [
      1260279914,
      2174081500,
    ],
  },
  "207244575-X": {
    "nodes": [
      811966419,
    ],
  },
  "207244576-0": {
    "nodes": [
      662330781,
    ],
  },
  "207244576-12": {
    "nodes": [
      2174081626,
      2174081635,
      2174081649,
      2174081652,
    ],
  },
  "207244576-13": {
    "nodes": [
      2174081652,
      9974084442,
    ],
  },
  "207244576-2": {
    "nodes": [
      662330781,
      2174081532,
      11042105000,
    ],
  },
  "207244576-9": {
    "nodes": [
      11042105000,
      2174081535,
      2174081537,
      2174081541,
      2174081545,
      2174081559,
      2174081576,
      2174081626,
    ],
  },
  "207244576-X": {
    "nodes": [
      9974084442,
    ],
  },
  "207244577-0": {
    "nodes": [
      2174081494,
    ],
  },
  "207244577-4": {
    "nodes": [
      2174081494,
      2174081501,
      2174081505,
      2174081509,
      2174081516,
    ],
  },
  "207244577-X": {
    "nodes": [
      2174081516,
    ],
  },
  "207244578-0": {
    "nodes": [
      811966419,
    ],
  },
  "207244578-4": {
    "nodes": [
      811966419,
      811966420,
      811966423,
      811966426,
      811966267,
    ],
  },
  "207244578-X": {
    "nodes": [
      811966267,
    ],
  },
  "207244579-0": {
    "nodes": [
      8857449835,
    ],
  },
  "207244579-53": {
    "nodes": [
      8857449835,
      8857449834,
      2174081676,
      2174081675,
      2174081673,
      2174081671,
      2174081670,
      2174081668,
      2174081666,
      2174081664,
      2174081663,
      2174081661,
      2174081657,
      2174081656,
      2174081654,
      2174081651,
      2174081647,
      2174081645,
      2174081638,
      2174081636,
      2174081633,
      2174081628,
      2174081625,
      2174081620,
      2174081616,
      2174081613,
      2174081609,
      2174081607,
      2174081606,
      2174081604,
      2174081600,
      2174081597,
      2174081581,
      2174081578,
      2174081574,
      2174081567,
      2174081555,
      2174081550,
      2174081547,
      2174081549,
      2174081552,
      2174081554,
      2174081557,
      2174081560,
      2174081566,
      2174081571,
      2174081572,
      2174081579,
      2174081590,
      2174081593,
      2174081602,
      2174081611,
      2174081614,
      2174081626,
    ],
  },
  "207244579-X": {
    "nodes": [
      2174081626,
    ],
  },
  "207244580-0": {
    "nodes": [
      2174081516,
    ],
  },
  "207244580-3": {
    "nodes": [
      2174081516,
      2174081517,
      2174081519,
      2174081510,
    ],
  },
  "207244580-5": {
    "nodes": [
      2174081510,
      2174081507,
      2174081500,
    ],
  },
  "207244580-X": {
    "nodes": [
      2174081500,
    ],
  },
  "207244581-0": {
    "nodes": [
      315495697,
    ],
  },
  "207244581-X": {
    "nodes": [
      315495697,
      2174081495,
      2174081496,
      2174081497,
      2174081498,
      2174081502,
    ],
  },
  "225273874-4": {
    "nodes": [
      2340751762,
      2340751761,
      2340751763,
      4946913862,
      2340751766,
    ],
  },
  "225273874-6": {
    "nodes": [
      2340751766,
      2340751767,
      2340751759,
    ],
  },
  "225273874-X": {
    "nodes": [
      2340751759,
    ],
  },
  "23908487-X": {
    "nodes": [
      259144475,
      8184183310,
      269518571,
      259144474,
      259144473,
      259144472,
      381988529,
      259144471,
      381988530,
      259144470,
      259144469,
      259144311,
      8184183314,
      259144312,
      380652507,
      5379332142,
      259144298,
    ],
  },
  "24807526-1": {
    "nodes": [
      269521780,
      269521781,
    ],
  },
  "24807526-X": {
    "nodes": [
      269521781,
    ],
  },
  "254368716-0": {
    "nodes": [
      269518638,
    ],
  },
  "254368716-X": {
    "nodes": [
      269518638,
      2601632496,
    ],
  },
  "27802253-0": {
    "nodes": [
      305253418,
    ],
  },
  "27802253-6": {
    "nodes": [
      305253418,
      4946953323,
      4946960723,
      4946960722,
      4946953322,
      4946960721,
      315495702,
    ],
  },
  "27802253-X": {
    "nodes": [
      315495702,
    ],
  },
  "28699204-0": {
    "nodes": [
      254044099,
    ],
  },
  "28699204-4": {
    "nodes": [
      254044099,
      315495677,
      315495678,
      315495679,
      315495680,
    ],
  },
  "28699204-8": {
    "nodes": [
      315495680,
      1289323233,
      315495681,
      1289323286,
      315495682,
    ],
  },
  "28699204-X": {
    "nodes": [
      315495682,
    ],
  },
  "31869820-0": {
    "nodes": [
      356839448,
    ],
  },
  "31869820-1": {
    "nodes": [
      356839448,
      9950138785,
    ],
  },
  "31869820-12": {
    "nodes": [
      356839461,
      2174081536,
      356839463,
      811966344,
      811653157,
      811653164,
      315495694,
    ],
  },
  "31869820-2": {
    "nodes": [
      9950138785,
      2174081624,
    ],
  },
  "31869820-3": {
    "nodes": [
      2174081624,
      356839454,
    ],
  },
  "31869820-4": {
    "nodes": [
      356839454,
      356839458,
    ],
  },
  "31869820-6": {
    "nodes": [
      356839458,
      2174081538,
      356839461,
    ],
  },
  "31869820-X": {
    "nodes": [
      315495694,
    ],
  },
  "33508248-7": {
    "nodes": [
      249631090,
      249631092,
      249631096,
      249631111,
      249631125,
      249631138,
      249631147,
      4946913854,
    ],
  },
  "33508248-9": {
    "nodes": [
      4946913854,
      249631159,
      2340751759,
    ],
  },
  "33508248-X": {
    "nodes": [
      2340751759,
    ],
  },
  "34385856-0": {
    "nodes": [
      315495682,
    ],
  },
  "34385856-16": {
    "nodes": [
      315495682,
      9955281540,
      315495683,
      9955281537,
      9955281539,
      315495684,
      9955281538,
      9955281535,
      315495685,
      9955281536,
      315495686,
      315495687,
      9955281532,
      315495688,
      9955281531,
      315495689,
      662330695,
    ],
  },
  "34385856-21": {
    "nodes": [
      662330695,
      315495690,
      9955281533,
      315495691,
      9955281534,
      1340337469,
    ],
  },
  "34385856-22": {
    "nodes": [
      1340337469,
      662330715,
    ],
  },
  "34385856-23": {
    "nodes": [
      662330715,
      315495694,
    ],
  },
  "34385856-25": {
    "nodes": [
      315495694,
      315495696,
      315495697,
    ],
  },
  "34385856-28": {
    "nodes": [
      315495697,
      315495698,
      315495699,
      811966267,
    ],
  },
  "34385856-30": {
    "nodes": [
      811966267,
      315495700,
      315495701,
    ],
  },
  "34385856-31": {
    "nodes": [
      315495701,
      315495702,
    ],
  },
  "34385856-X": {
    "nodes": [
      315495702,
    ],
  },
  "34385857-0": {
    "nodes": [
      315495682,
    ],
  },
  "34385857-12": {
    "nodes": [
      394764926,
      394764927,
      525646046,
      394764928,
      9163051366,
    ],
  },
  "34385857-15": {
    "nodes": [
      9163051366,
      804142447,
      394764929,
      8857449835,
    ],
  },
  "34385857-16": {
    "nodes": [
      8857449835,
      422606116,
    ],
  },
  "34385857-3": {
    "nodes": [
      315495682,
      1289323263,
      1289323238,
      394764917,
    ],
  },
  "34385857-5": {
    "nodes": [
      394764917,
      804142442,
      394764918,
    ],
  },
  "34385857-6": {
    "nodes": [
      394764918,
      356839454,
    ],
  },
  "34385857-7": {
    "nodes": [
      356839454,
      1340315290,
    ],
  },
  "34385857-8": {
    "nodes": [
      1340315290,
      394764926,
    ],
  },
  "34385857-X": {
    "nodes": [
      422606116,
    ],
  },
  "34385858-0": {
    "nodes": [
      269521527,
    ],
  },
  "34385858-X": {
    "nodes": [
      269521527,
      269521528,
      269521529,
      269521530,
      269521531,
      269521532,
    ],
  },
  "36201852-27": {
    "nodes": [
      1591497010,
      422606063,
      11159904705,
      422606065,
      11159845004,
      422606067,
      422606074,
      2287241571,
      422606076,
      6617478701,
      422606077,
      10721551215,
      10721551217,
      422606079,
      2863782729,
      2401124158,
      422606081,
      422606083,
      422606084,
      6377218456,
      944512099,
      422606086,
      422606088,
      422606090,
      422606091,
      422606093,
      422606095,
      9950138785,
    ],
  },
  "36201852-31": {
    "nodes": [
      9950138785,
      9955281547,
      422606100,
      422606102,
      8857479486,
    ],
  },
  "36201852-37": {
    "nodes": [
      8857479486,
      8857479484,
      422606104,
      422606106,
      422606107,
      422606109,
      1401551808,
    ],
  },
  "36201852-38": {
    "nodes": [
      1401551808,
      422606111,
    ],
  },
  "36201852-40": {
    "nodes": [
      422606111,
      422606112,
      8857467513,
    ],
  },
  "36201852-44": {
    "nodes": [
      8857467513,
      8857449826,
      8857449856,
      422606114,
      422606116,
    ],
  },
  "36201852-56": {
    "nodes": [
      422606116,
      422606117,
      8857449848,
      422606119,
      422606121,
      938736335,
      938736391,
      422606123,
      938736389,
      422606124,
      8857449833,
      8685674741,
      9553839401,
    ],
  },
  "36201852-58": {
    "nodes": [
      9553839401,
      422606126,
      10712699128,
    ],
  },
  "36201852-X": {
    "nodes": [
      10712699128,
    ],
  },
  "42206235-0": {
    "nodes": [
      394764931,
    ],
  },
  "42206235-10": {
    "nodes": [
      804142449,
      804142434,
      394764934,
      804142423,
      394764935,
      394764936,
      394764937,
    ],
  },
  "42206235-4": {
    "nodes": [
      394764931,
      394764932,
      804142458,
      394764933,
      804142449,
    ],
  },
  "42206235-X": {
    "nodes": [
      394764937,
    ],
  },
  "504542879-0": {
    "nodes": [
      2340751759,
    ],
  },
  "504542879-8": {
    "nodes": [
      2340751759,
      249631170,
      249631181,
      249631194,
      249631207,
      249631218,
      249631221,
      256775725,
      1436604448,
    ],
  },
  "504542879-X": {
    "nodes": [
      1436604448,
    ],
  },
  "504542880-0": {
    "nodes": [
      2340751766,
    ],
  },
  "504542880-3": {
    "nodes": [
      2340751766,
      2340751771,
      4946913853,
      4946913854,
    ],
  },
  "504542880-X": {
    "nodes": [
      4946913854,
    ],
  },
  "504548285-X": {
    "nodes": [
      305253169,
      4946953424,
      4946953423,
      4946953422,
    ],
  },
  "504548365-1": {
    "nodes": [
      305253172,
      305253418,
    ],
  },
  "504548365-X": {
    "nodes": [
      305253418,
    ],
  },
  "51912061-0": {
    "nodes": [
      305253174,
    ],
  },
  "51912061-12": {
    "nodes": [
      662330781,
      662330782,
      662330784,
      662330749,
      662330751,
      662330734,
      2174081516,
    ],
  },
  "51912061-14": {
    "nodes": [
      2174081516,
      662330736,
      11042120011,
    ],
  },
  "51912061-19": {
    "nodes": [
      11042120011,
      662330738,
      1260279909,
      662330752,
      662330754,
      9165215677,
    ],
  },
  "51912061-25": {
    "nodes": [
      9165215677,
      662330756,
      662330759,
      662330766,
      662330768,
      662330770,
      394764926,
    ],
  },
  "51912061-6": {
    "nodes": [
      305253174,
      662330772,
      662330774,
      662330776,
      662330777,
      662330779,
      662330781,
    ],
  },
  "51912061-X": {
    "nodes": [
      394764926,
    ],
  },
  "51912062-0": {
    "nodes": [
      356839454,
    ],
  },
  "51912062-15": {
    "nodes": [
      356839454,
      662330720,
      1289323259,
      662330721,
      662330723,
      662330716,
      662330718,
      662330725,
      2174081534,
      662330727,
      662330706,
      662330709,
      2174081521,
      662330711,
      662330712,
      662330715,
    ],
  },
  "51912062-X": {
    "nodes": [
      662330715,
    ],
  },
  "51912063-0": {
    "nodes": [
      269518638,
    ],
  },
  "51912063-2": {
    "nodes": [
      269518638,
      269518640,
      269518641,
    ],
  },
  "51912063-X": {
    "nodes": [
      269518641,
    ],
  },
  "51912065-0": {
    "nodes": [
      662330695,
    ],
  },
  "51912065-3": {
    "nodes": [
      662330695,
      662330698,
      662330702,
      1340334764,
    ],
  },
  "51912065-5": {
    "nodes": [
      1340334764,
      662330705,
      269518638,
    ],
  },
  "51912065-X": {
    "nodes": [
      269518638,
    ],
  },
  "66350739-0": {
    "nodes": [
      394764946,
    ],
  },
  "66350739-3": {
    "nodes": [
      394764946,
      1289323258,
      394764947,
      394764948,
    ],
  },
  "66350739-4": {
    "nodes": [
      394764948,
      269521527,
    ],
  },
  "66350739-X": {
    "nodes": [
      269521527,
    ],
  },
  "66350741-0": {
    "nodes": [
      394764937,
    ],
  },
  "66350741-11": {
    "nodes": [
      804142452,
      394764945,
      394764946,
    ],
  },
  "66350741-9": {
    "nodes": [
      394764937,
      804142437,
      394764939,
      394764940,
      804142429,
      394764941,
      394764942,
      394764943,
      394764944,
      804142452,
    ],
  },
  "66350741-X": {
    "nodes": [
      394764946,
    ],
  },
  "67239462-0": {
    "nodes": [
      356839461,
    ],
  },
  "67239462-5": {
    "nodes": [
      356839461,
      811966406,
      811966409,
      811966413,
      811966415,
      9165215676,
    ],
  },
  "67239462-6": {
    "nodes": [
      9165215676,
      811966419,
    ],
  },
  "67239462-X": {
    "nodes": [
      811966419,
    ],
  },
  "67239473-0": {
    "nodes": [
      315495694,
    ],
  },
  "67239473-1": {
    "nodes": [
      315495694,
      811966419,
    ],
  },
  "67239473-X": {
    "nodes": [
      811966419,
    ],
  },
  "957200847-0": {
    "nodes": [
      8857449836,
    ],
  },
  "957200847-1": {
    "nodes": [
      8857449836,
      422606116,
    ],
  },
  "957200847-X": {
    "nodes": [
      422606116,
    ],
  },
  "957200848-0": {
    "nodes": [
      8857449854,
    ],
  },
  "957200848-1": {
    "nodes": [
      8857449854,
      422606111,
    ],
  },
  "957200848-X": {
    "nodes": [
      422606111,
    ],
  },
  "957200849-1": {
    "nodes": [
      8857449857,
      1401551808,
    ],
  },
  "957200849-X": {
    "nodes": [
      1401551808,
    ],
  },
  "957200850-1": {
    "nodes": [
      8857449858,
      8857449859,
    ],
  },
  "957200850-X": {
    "nodes": [
      8857449859,
    ],
  },
  "957200851-1": {
    "nodes": [
      8857449860,
      8857449861,
    ],
  },
  "957200851-X": {
    "nodes": [
      8857449861,
    ],
  },
  "957201355-1": {
    "nodes": [
      8857467512,
      8857467513,
    ],
  },
  "957201355-X": {
    "nodes": [
      8857467513,
    ],
  },
  "957201477-1": {
    "nodes": [
      8857479485,
      8857479486,
    ],
  },
  "957201477-X": {
    "nodes": [
      8857479486,
    ],
  },
  "991972440-0": {
    "nodes": [
      9165215676,
    ],
  },
  "991972440-1": {
    "nodes": [
      9165215676,
      9165215677,
    ],
  },
  "991972440-X": {
    "nodes": [
      9165215677,
    ],
  },
}
`;
